# chuck-norris-discord-bot-rs

./: Cargo.toml  README.md
src/: main.rs
